<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:padding="50dp"
    tools:context=".ui.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/llBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/icon_back"
            android:gravity="center">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="10dp"
                android:src="@drawable/ic_left" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_medium"
            android:gravity="center"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="34sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_medium"
                android:gravity="center"
                android:text="@string/sound"
                android:textColor="@color/white"
                android:textSize="26sp" />


            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:paddingHorizontal="40dp">

                <RadioButton
                    android:id="@+id/rbSOff"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/radio_button_off_selector"
                    android:button="@android:color/transparent"
                    android:checked="true"
                    android:fontFamily="@font/ubuntu_medium"
                    android:gravity="center"
                    android:text="@string/off"
                    android:textColor="@color/black" />

                <View
                    android:layout_width="4dp"
                    android:layout_height="match_parent"
                    android:background="@color/white" />

                <RadioButton
                    android:id="@+id/rbSOn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/radio_button_on_selector"
                    android:button="@android:color/transparent"
                    android:checked="false"
                    android:fontFamily="@font/ubuntu_medium"
                    android:gravity="center"
                    android:text="@string/on"
                    android:textColor="@color/black" />

            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu_medium"
                    android:gravity="center"
                    android:text="@string/vibrate"
                    android:textColor="@color/white"
                    android:textSize="26sp" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal"
                    android:paddingHorizontal="40dp">

                    <RadioButton
                        android:id="@+id/rbVOff"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/radio_button_off_selector"
                        android:button="@android:color/transparent"
                        android:checked="true"
                        android:fontFamily="@font/ubuntu_medium"
                        android:gravity="center"
                        android:text="@string/off"
                        android:textColor="@color/black" />

                    <View
                        android:layout_width="4dp"
                        android:layout_height="match_parent"
                        android:background="@color/white" />

                    <RadioButton
                        android:id="@+id/rbVOn"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/radio_button_on_selector"
                        android:button="@android:color/transparent"
                        android:checked="false"
                        android:fontFamily="@font/ubuntu_medium"
                        android:gravity="center"
                        android:text="@string/on"
                        android:textColor="@color/black" />

                </RadioGroup>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2">

        </LinearLayout>

    </LinearLayout>

</LinearLayout>